bootstrap/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    NULL
    ROUTINE
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> variable_declaration
Rule 5     statement -> constant_declaration
Rule 6     statement -> function_declaration
Rule 7     statement -> struct_declaration
Rule 8     statement -> enum_declaration
Rule 9     statement -> interface_declaration
Rule 10    statement -> print_statement
Rule 11    statement -> if_statement
Rule 12    statement -> return_statement
Rule 13    statement -> assignment
Rule 14    statement -> expression_statement
Rule 15    statement -> match_statement
Rule 16    statement -> import_statement
Rule 17    match_statement -> MATCH expression LBRACE match_arms RBRACE
Rule 18    match_arms -> <empty>
Rule 19    match_arms -> match_arm_list maybe_comma
Rule 20    match_arm_list -> match_arm
Rule 21    match_arm_list -> match_arm_list COMMA match_arm
Rule 22    maybe_comma -> COMMA
Rule 23    maybe_comma -> empty
Rule 24    match_arm -> pattern ARROW inline_statement
Rule 25    inline_statement -> PRINT DOT INFO LPAREN expression RPAREN
Rule 26    inline_statement -> assignment_expression
Rule 27    inline_statement -> expression
Rule 28    pattern -> MINUS NUMBER
Rule 29    pattern -> NUMBER
Rule 30    pattern -> UNDERSCORE
Rule 31    assignment_expression -> lvalue ASSIGN expression
Rule 32    assignment_expression -> lvalue PLUS_ASSIGN expression
Rule 33    assignment_expression -> lvalue MINUS_ASSIGN expression
Rule 34    assignment_expression -> lvalue MULTIPLY_ASSIGN expression
Rule 35    assignment_expression -> lvalue DIVIDE_ASSIGN expression
Rule 36    type_alias_declaration -> TYPE IDENTIFIER ASSIGN type SEMICOLON
Rule 37    interface_declaration -> INTERFACE IDENTIFIER LBRACE interface_members RBRACE
Rule 38    interface_members -> interface_members interface_member
Rule 39    interface_members -> interface_member
Rule 40    interface_member -> FN IDENTIFIER LPAREN parameters RPAREN ARROW type SEMICOLON
Rule 41    interface_member -> FN IDENTIFIER LPAREN parameters RPAREN SEMICOLON
Rule 42    interface_list -> interface_list COMMA IDENTIFIER
Rule 43    interface_list -> IDENTIFIER
Rule 44    struct_members -> struct_members struct_member
Rule 45    struct_members -> struct_member
Rule 46    struct_member_field -> mut_opt IDENTIFIER ARROW type SEMICOLON
Rule 47    struct_member -> mut_field_declaration
Rule 48    struct_member -> field_declaration
Rule 49    struct_member -> method_declaration
Rule 50    struct_member -> struct_member_field
Rule 51    expression -> IDENTIFIER LBRACE struct_initializers RBRACE
Rule 52    struct_initializers -> struct_initializers COMMA struct_initializer
Rule 53    struct_initializers -> struct_initializer
Rule 54    struct_initializers -> <empty>
Rule 55    struct_initializer -> IDENTIFIER COLON expression
Rule 56    struct_declaration -> STRUCT IDENTIFIER IMPLEMENTS interface_list LBRACE struct_members RBRACE
Rule 57    struct_declaration -> STRUCT IDENTIFIER implements_clause LBRACE struct_members RBRACE
Rule 58    implements_clause -> IMPLEMENTS interface_list
Rule 59    implements_clause -> <empty>
Rule 60    method_declaration -> decorators FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 61    method_declaration -> FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 62    mut_field_declaration -> MUT LET IDENTIFIER ARROW type SEMICOLON
Rule 63    field_declaration -> LET IDENTIFIER ARROW type SEMICOLON
Rule 64    enum_declaration -> ENUM IDENTIFIER LBRACE enum_variants_opt RBRACE
Rule 65    enum_variants_opt -> enum_variants
Rule 66    enum_variants_opt -> empty
Rule 67    enum_variants -> enum_variant_list maybe_trailing_comma
Rule 68    enum_variant_list -> enum_variant
Rule 69    enum_variant_list -> enum_variant_list COMMA enum_variant
Rule 70    maybe_trailing_comma -> COMMA
Rule 71    maybe_trailing_comma -> empty
Rule 72    enum_variant -> IDENTIFIER LBRACE struct_members RBRACE
Rule 73    enum_variant -> IDENTIFIER
Rule 74    decorators -> decorators decorator
Rule 75    decorators -> decorator
Rule 76    decorator -> AT IDENTIFIER
Rule 77    constant_declaration -> CONST LET IDENTIFIER ARROW type ASSIGN expression SEMICOLON
Rule 78    variable_declaration -> LET mut_opt IDENTIFIER ARROW type ASSIGN expression SEMICOLON
Rule 79    variable_declaration -> LET mut_opt IDENTIFIER ASSIGN expression SEMICOLON
Rule 80    variable_declaration -> MUT IDENTIFIER ARROW type ASSIGN expression SEMICOLON
Rule 81    variable_declaration -> MUT IDENTIFIER ASSIGN expression SEMICOLON
Rule 82    mut_opt -> MUT
Rule 83    mut_opt -> <empty>
Rule 84    function_declaration -> decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 85    function_declaration -> decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 86    function_declaration -> ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 87    function_declaration -> ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 88    function_declaration -> decorators FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 89    function_declaration -> decorators FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 90    function_declaration -> FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 91    function_declaration -> FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 92    expression -> AWAIT expression
Rule 93    print_statement -> PRINT DOT INFO LPAREN expression RPAREN SEMICOLON
Rule 94    import_statement -> IMPORT LBRACE import_items RBRACE FROM STRING SEMICOLON
Rule 95    import_items -> import_items COMMA IDENTIFIER
Rule 96    import_items -> IDENTIFIER
Rule 97    import_items -> <empty>
Rule 98    block -> LBRACE statements RBRACE
Rule 99    if_statement -> IF expression block else_clause
Rule 100   if_statement -> IF LPAREN expression RPAREN block else_clause
Rule 101   else_clause -> ELSE if_statement
Rule 102   else_clause -> ELSE block
Rule 103   else_clause -> <empty>
Rule 104   return_statement -> RETURN expression SEMICOLON
Rule 105   return_statement -> RETURN SEMICOLON
Rule 106   assignment -> assignment_expression SEMICOLON
Rule 107   lvalue -> IDENTIFIER
Rule 108   lvalue -> expression DOT IDENTIFIER
Rule 109   expression -> FN LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
Rule 110   expression -> FN LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 111   expression_statement -> expression SEMICOLON
Rule 112   parameters -> parameters COMMA parameter
Rule 113   parameters -> parameters COMMA
Rule 114   parameters -> parameter
Rule 115   parameters -> <empty>
Rule 116   parameter -> IDENTIFIER ARROW type
Rule 117   parameter -> IDENTIFIER
Rule 118   type -> IDENTIFIER
Rule 119   type -> type LT type_list GT
Rule 120   type_list -> type_list COMMA type
Rule 121   type_list -> type
Rule 122   expression -> LBRACKET elements RBRACKET
Rule 123   elements -> elements COMMA expression
Rule 124   elements -> elements COMMA
Rule 125   elements -> expression
Rule 126   elements -> <empty>
Rule 127   expression -> expression PLUS expression
Rule 128   expression -> expression MINUS expression
Rule 129   expression -> expression MULTIPLY expression
Rule 130   expression -> expression DIVIDE expression
Rule 131   expression -> expression LT expression
Rule 132   expression -> expression GT expression
Rule 133   expression -> expression LEQ expression
Rule 134   expression -> expression GEQ expression
Rule 135   expression -> expression EQ expression
Rule 136   expression -> expression NEQ expression
Rule 137   expression -> expression AND expression
Rule 138   expression -> expression OR expression
Rule 139   expression -> MINUS expression
Rule 140   expression -> LPAREN expression RPAREN
Rule 141   expression -> NUMBER
Rule 142   expression -> STRING
Rule 143   expression -> IDENTIFIER
Rule 144   expression -> IDENTIFIER LPAREN arguments RPAREN
Rule 145   expression -> expression LPAREN arguments RPAREN
Rule 146   expression -> expression DOT IDENTIFIER
Rule 147   arguments -> arguments COMMA expression
Rule 148   arguments -> expression
Rule 149   arguments -> <empty>
Rule 150   empty -> <empty>

Terminals, with rules where they appear

AND                  : 137
ARROW                : 24 40 46 60 61 62 63 77 78 80 84 86 88 90 109 116
ASSIGN               : 31 36 77 78 79 80 81
ASYNC                : 84 85 86 87
AT                   : 76
AWAIT                : 92
COLON                : 55
COMMA                : 21 22 42 52 69 70 95 112 113 120 123 124 147
CONST                : 77
DIVIDE               : 130
DIVIDE_ASSIGN        : 35
DOT                  : 25 93 108 146
ELSE                 : 101 102
ENUM                 : 64
EQ                   : 135
FALSE                : 
FN                   : 40 41 60 61 84 85 86 87 88 89 90 91 109 110
FROM                 : 94
GEQ                  : 134
GT                   : 119 132
IDENTIFIER           : 36 37 40 41 42 43 46 51 55 56 57 60 61 62 63 64 72 73 76 77 78 79 80 81 84 85 86 87 88 89 90 91 95 96 107 108 116 117 118 143 144 146
IF                   : 99 100
IMPLEMENTS           : 56 58
IMPORT               : 94
INFO                 : 25 93
INTERFACE            : 37
LBRACE               : 17 37 51 56 57 60 61 64 72 84 85 86 87 88 89 90 91 94 98 109 110
LBRACKET             : 122
LEQ                  : 133
LET                  : 62 63 77 78 79
LPAREN               : 25 40 41 60 61 84 85 86 87 88 89 90 91 93 100 109 110 140 144 145
LT                   : 119 131
MATCH                : 17
MINUS                : 28 128 139
MINUS_ASSIGN         : 33
MULTIPLY             : 129
MULTIPLY_ASSIGN      : 34
MUT                  : 62 80 81 82
NEQ                  : 136
NULL                 : 
NUMBER               : 28 29 141
OR                   : 138
PLUS                 : 127
PLUS_ASSIGN          : 32
PRINT                : 25 93
RBRACE               : 17 37 51 56 57 60 61 64 72 84 85 86 87 88 89 90 91 94 98 109 110
RBRACKET             : 122
RETURN               : 104 105
ROUTINE              : 
RPAREN               : 25 40 41 60 61 84 85 86 87 88 89 90 91 93 100 109 110 140 144 145
SEMICOLON            : 36 40 41 46 62 63 77 78 79 80 81 93 94 104 105 106 111
STRING               : 94 142
STRUCT               : 56 57
TRUE                 : 
TYPE                 : 36
UNDERSCORE           : 30
error                : 

Nonterminals, with rules where they appear

arguments            : 144 145 147
assignment           : 13
assignment_expression : 26 106
block                : 99 100 102
constant_declaration : 5
decorator            : 74 75
decorators           : 60 74 84 85 88 89
elements             : 122 123 124
else_clause          : 99 100
empty                : 23 66 71
enum_declaration     : 8
enum_variant         : 68 69
enum_variant_list    : 67 69
enum_variants        : 65
enum_variants_opt    : 64
expression           : 17 25 27 31 32 33 34 35 55 77 78 79 80 81 92 93 99 100 104 108 111 123 125 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 140 145 146 147 148
expression_statement : 14
field_declaration    : 48
function_declaration : 6
if_statement         : 11 101
implements_clause    : 57
import_items         : 94 95
import_statement     : 16
inline_statement     : 24
interface_declaration : 9
interface_list       : 42 56 58
interface_member     : 38 39
interface_members    : 37 38
lvalue               : 31 32 33 34 35
match_arm            : 20 21
match_arm_list       : 19 21
match_arms           : 17
match_statement      : 15
maybe_comma          : 19
maybe_trailing_comma : 67
method_declaration   : 49
mut_field_declaration : 47
mut_opt              : 46 78 79
parameter            : 112 114
parameters           : 40 41 60 61 84 85 86 87 88 89 90 91 109 110 112 113
pattern              : 24
print_statement      : 10
program              : 0
return_statement     : 12
statement            : 2 3
statements           : 1 2 60 61 84 85 86 87 88 89 90 91 98 109 110
struct_declaration   : 7
struct_initializer   : 52 53
struct_initializers  : 51 52
struct_member        : 44 45
struct_member_field  : 50
struct_members       : 44 56 57 72
type                 : 36 40 46 60 61 62 63 77 78 80 84 86 88 90 109 116 119 120 121
type_alias_declaration : 
type_list            : 119 120
variable_declaration : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . variable_declaration
    (5) statement -> . constant_declaration
    (6) statement -> . function_declaration
    (7) statement -> . struct_declaration
    (8) statement -> . enum_declaration
    (9) statement -> . interface_declaration
    (10) statement -> . print_statement
    (11) statement -> . if_statement
    (12) statement -> . return_statement
    (13) statement -> . assignment
    (14) statement -> . expression_statement
    (15) statement -> . match_statement
    (16) statement -> . import_statement
    (78) variable_declaration -> . LET mut_opt IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (79) variable_declaration -> . LET mut_opt IDENTIFIER ASSIGN expression SEMICOLON
    (80) variable_declaration -> . MUT IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (81) variable_declaration -> . MUT IDENTIFIER ASSIGN expression SEMICOLON
    (77) constant_declaration -> . CONST LET IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (84) function_declaration -> . decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (85) function_declaration -> . decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (86) function_declaration -> . ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (87) function_declaration -> . ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (88) function_declaration -> . decorators FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (89) function_declaration -> . decorators FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (90) function_declaration -> . FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (91) function_declaration -> . FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (56) struct_declaration -> . STRUCT IDENTIFIER IMPLEMENTS interface_list LBRACE struct_members RBRACE
    (57) struct_declaration -> . STRUCT IDENTIFIER implements_clause LBRACE struct_members RBRACE
    (64) enum_declaration -> . ENUM IDENTIFIER LBRACE enum_variants_opt RBRACE
    (37) interface_declaration -> . INTERFACE IDENTIFIER LBRACE interface_members RBRACE
    (93) print_statement -> . PRINT DOT INFO LPAREN expression RPAREN SEMICOLON
    (99) if_statement -> . IF expression block else_clause
    (100) if_statement -> . IF LPAREN expression RPAREN block else_clause
    (104) return_statement -> . RETURN expression SEMICOLON
    (105) return_statement -> . RETURN SEMICOLON
    (106) assignment -> . assignment_expression SEMICOLON
    (111) expression_statement -> . expression SEMICOLON
    (17) match_statement -> . MATCH expression LBRACE match_arms RBRACE
    (94) import_statement -> . IMPORT LBRACE import_items RBRACE FROM STRING SEMICOLON
    (74) decorators -> . decorators decorator
    (75) decorators -> . decorator
    (31) assignment_expression -> . lvalue ASSIGN expression
    (32) assignment_expression -> . lvalue PLUS_ASSIGN expression
    (33) assignment_expression -> . lvalue MINUS_ASSIGN expression
    (34) assignment_expression -> . lvalue MULTIPLY_ASSIGN expression
    (35) assignment_expression -> . lvalue DIVIDE_ASSIGN expression
    (51) expression -> . IDENTIFIER LBRACE struct_initializers RBRACE
    (92) expression -> . AWAIT expression
    (109) expression -> . FN LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (110) expression -> . FN LPAREN parameters RPAREN LBRACE statements RBRACE
    (122) expression -> . LBRACKET elements RBRACKET
    (127) expression -> . expression PLUS expression
    (128) expression -> . expression MINUS expression
    (129) expression -> . expression MULTIPLY expression
    (130) expression -> . expression DIVIDE expression
    (131) expression -> . expression LT expression
    (132) expression -> . expression GT expression
    (133) expression -> . expression LEQ expression
    (134) expression -> . expression GEQ expression
    (135) expression -> . expression EQ expression
    (136) expression -> . expression NEQ expression
    (137) expression -> . expression AND expression
    (138) expression -> . expression OR expression
    (139) expression -> . MINUS expression
    (140) expression -> . LPAREN expression RPAREN
    (141) expression -> . NUMBER
    (142) expression -> . STRING
    (143) expression -> . IDENTIFIER
    (144) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (145) expression -> . expression LPAREN arguments RPAREN
    (146) expression -> . expression DOT IDENTIFIER
    (76) decorator -> . AT IDENTIFIER
    (107) lvalue -> . IDENTIFIER
    (108) lvalue -> . expression DOT IDENTIFIER

    LET             shift and go to state 17
    MUT             shift and go to state 20
    CONST           shift and go to state 21
    ASYNC           shift and go to state 23
    FN              shift and go to state 24
    STRUCT          shift and go to state 26
    ENUM            shift and go to state 27
    INTERFACE       shift and go to state 28
    PRINT           shift and go to state 29
    IF              shift and go to state 30
    RETURN          shift and go to state 31
    MATCH           shift and go to state 33
    IMPORT          shift and go to state 34
    IDENTIFIER      shift and go to state 18
    AWAIT           shift and go to state 38
    LBRACKET        shift and go to state 39
    MINUS           shift and go to state 40
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 41
    STRING          shift and go to state 35
    AT              shift and go to state 42

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    constant_declaration           shift and go to state 5
    function_declaration           shift and go to state 6
    struct_declaration             shift and go to state 7
    enum_declaration               shift and go to state 8
    interface_declaration          shift and go to state 9
    print_statement                shift and go to state 10
    if_statement                   shift and go to state 11
    return_statement               shift and go to state 12
    assignment                     shift and go to state 13
    expression_statement           shift and go to state 14
    match_statement                shift and go to state 15
    import_statement               shift and go to state 16
    expression                     shift and go to state 19
    decorators                     shift and go to state 22
    assignment_expression          shift and go to state 32
    decorator                      shift and go to state 36
    lvalue                         shift and go to state 37

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . variable_declaration
    (5) statement -> . constant_declaration
    (6) statement -> . function_declaration
    (7) statement -> . struct_declaration
    (8) statement -> . enum_declaration
    (9) statement -> . interface_declaration
    (10) statement -> . print_statement
    (11) statement -> . if_statement
    (12) statement -> . return_statement
    (13) statement -> . assignment
    (14) statement -> . expression_statement
    (15) statement -> . match_statement
    (16) statement -> . import_statement
    (78) variable_declaration -> . LET mut_opt IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (79) variable_declaration -> . LET mut_opt IDENTIFIER ASSIGN expression SEMICOLON
    (80) variable_declaration -> . MUT IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (81) variable_declaration -> . MUT IDENTIFIER ASSIGN expression SEMICOLON
    (77) constant_declaration -> . CONST LET IDENTIFIER ARROW type ASSIGN expression SEMICOLON
    (84) function_declaration -> . decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (85) function_declaration -> . decorators ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (86) function_declaration -> . ASYNC FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (87) function_declaration -> . ASYNC FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (88) function_declaration -> . decorators FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (89) function_declaration -> . decorators FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (90) function_declaration -> . FN IDENTIFIER LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (91) function_declaration -> . FN IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (56) struct_declaration -> . STRUCT IDENTIFIER IMPLEMENTS interface_list LBRACE struct_members RBRACE
    (57) struct_declaration -> . STRUCT IDENTIFIER implements_clause LBRACE struct_members RBRACE
    (64) enum_declaration -> . ENUM IDENTIFIER LBRACE enum_variants_opt RBRACE
    (37) interface_declaration -> . INTERFACE IDENTIFIER LBRACE interface_members RBRACE
    (93) print_statement -> . PRINT DOT INFO LPAREN expression RPAREN SEMICOLON
    (99) if_statement -> . IF expression block else_clause
    (100) if_statement -> . IF LPAREN expression RPAREN block else_clause
    (104) return_statement -> . RETURN expression SEMICOLON
    (105) return_statement -> . RETURN SEMICOLON
    (106) assignment -> . assignment_expression SEMICOLON
    (111) expression_statement -> . expression SEMICOLON
    (17) match_statement -> . MATCH expression LBRACE match_arms RBRACE
    (94) import_statement -> . IMPORT LBRACE import_items RBRACE FROM STRING SEMICOLON
    (74) decorators -> . decorators decorator
    (75) decorators -> . decorator
    (31) assignment_expression -> . lvalue ASSIGN expression
    (32) assignment_expression -> . lvalue PLUS_ASSIGN expression
    (33) assignment_expression -> . lvalue MINUS_ASSIGN expression
    (34) assignment_expression -> . lvalue MULTIPLY_ASSIGN expression
    (35) assignment_expression -> . lvalue DIVIDE_ASSIGN expression
    (51) expression -> . IDENTIFIER LBRACE struct_initializers RBRACE
    (92) expression -> . AWAIT expression
    (109) expression -> . FN LPAREN parameters RPAREN ARROW type LBRACE statements RBRACE
    (110) expression -> . FN LPAREN parameters RPAREN LBRACE statements RBRACE
    (122) expression -> . LBRACKET elements RBRACKET
    (127) expression -> . expression PLUS expression
    (128) expression -> . expression MINUS expression
    (129) expression -> . expression MULTIPLY expression
    (130) expression -> . expression DIVIDE expression
    (131) expression -> . expression LT expression
    (132) expression -> . expression GT expression
    (133) expression -> . expression LEQ expression
    (134) expression -> . expression GEQ expression
    (135) expression -> . expression EQ expression
    (136) expression -> . expression NEQ expression
    (137) expression -> . expression AND expression
    (138) expression -> . expression OR expression
    (139) expression -> . MINUS expression
    (140) expression -> . LPAREN expression RPAREN
    (141) expression -> . NUMBER
    (142) expression -> . STRING
    (143) expression -> . IDENTIFIER
    (144) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (145) expression -> . expression LPAREN arguments RPAREN
    (146) expression -> . expression DOT IDENTIFIER
    (76) decorator -> . AT IDENTIFIER
    (107) lvalue -> . IDENTIFIER
    (108) lvalue -> . expression DOT IDENTIFIER

    $end            reduce using rule 1 (program -> statements .)
    LET             shift and go to state 17
    MUT             shift and go to state 20
    CONST           shift and go to state 21
    ASYNC           shift and go to state 23
    FN              shift and go to state 24
    STRUCT          shift and go to state 26
    ENUM            shift and go to state 27
    INTERFACE       shift and go to state 28
    PRINT           shift and go to state 29
    IF              shift and go to state 30
    RETURN          shift and go to state 31
    MATCH           shift and go to state 33
    IMPORT          shift and go to state 34
    IDENTIFIER      shift and go to state 18
    AWAIT           shift and go to state 38
    LBRACKET        shift and go to state 39
    MINUS           shift and go to state 40
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 41
    STRING          shift and go to state 35
    AT              shift and go to state 42

    statement                      shift and go to state 43
    variable_declaration           shift and go to state 4
    constant_declaration           shift and go to state 5
    function_declaration           shift and go to state 6
    struct_declaration             shift and go to state 7
    enum_declaration               shift and go to state 8
    interface_declaration          shift and go to state 9
    print_statement                shift and go to state 10
    if_statement                   shift and go to state 11
    return_statement               shift and go to state 12
    assignment                     shift and go to state 13
    expression_statement           shift and go to state 14
    match_statement                shift and go to state 15
    import_statement               shift and go to state 16
    expression                     shift and go to state 19
    decorators                     shift and go to state 22
    assignment_expression          shift and go to state 32
    decorator                      shift and go to state 36
    lvalue                         shift and go to state 37

state 3

    (3) statements -> statement .

    LET             reduce using rule 3 (statements -> statement .)
    MUT             reduce using rule 3 (statements -> statement .)
    CONST           reduce using rule 3 (statements -> statement .)
    ASYNC           reduce using rule 3 (statements -> statement .)
    FN              reduce using rule 3 (statements -> statement .)
    STRUCT          reduce using rule 3 (statements -> statement .)
    ENUM            reduce using rule 3 (statements -> statement .)
    INTERFACE       reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    MATCH           reduce using rule 3 (statements -> statement .)
    IMPORT          reduce using rule 3 (statements -> statement .)
    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    AWAIT           reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    AT              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> variable_declaration .

    LET             reduce using rule 4 (statement -> variable_declaration .)
    MUT             reduce using rule 4 (statement -> variable_declaration .)
    CONST           reduce using rule 4 (statement -> variable_declaration .)
    ASYNC           reduce using rule 4 (statement -> variable_declaration .)
    FN              reduce using rule 4 (statement -> variable_declaration .)
    STRUCT          reduce using rule 4 (statement -> variable_declaration .)
    ENUM            reduce using rule 4 (statement -> variable_declaration .)
    INTERFACE       reduce using rule 4 (statement -> variable_declaration .)
    PRINT           reduce using rule 4 (statement -> variable_declaration .)
    IF              reduce using rule 4 (statement -> variable_declaration .)
    RETURN          reduce using rule 4 (statement -> variable_declaration .)
    MATCH           reduce using rule 4 (statement -> variable_declaration .)
    IMPORT          reduce using rule 4 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> variable_declaration .)
    AWAIT           reduce using rule 4 (statement -> variable_declaration .)
    LBRACKET        reduce using rule 4 (statement -> variable_declaration .)
    MINUS           reduce using rule 4 (statement -> variable_declaration .)
    LPAREN          reduce using rule 4 (statement -> variable_declaration .)
    NUMBER          reduce using rule 4 (statement -> variable_declaration .)
    STRING          reduce using rule 4 (statement -> variable_declaration .)
    AT              reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)
    RBRACE          reduce using rule 4 (statement -> variable_declaration .)


state 5

    (5) statement -> constant_declaration .

    LET             reduce using rule 5 (statement -> constant_declaration .)
    MUT             reduce using rule 5 (statement -> constant_declaration .)
    CONST           reduce using rule 5 (statement -> constant_declaration .)
    ASYNC           reduce using rule 5 (statement -> constant_declaration .)
    FN              reduce using rule 5 (statement -> constant_declaration .)
    STRUCT          reduce using rule 5 (statement -> constant_declaration .)
    ENUM            reduce using rule 5 (statement -> constant_declaration .)
    INTERFACE       reduce using rule 5 (statement -> constant_declaration .)
    PRINT           reduce using rule 5 (statement -> constant_declaration .)
    IF              reduce using rule 5 (statement -> constant_declaration .)
    RETURN          reduce using rule 5 (statement -> constant_declaration .)
    MATCH           reduce using rule 5 (statement -> constant_declaration .)
    IMPORT          reduce using rule 5 (statement -> constant_declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> constant_declaration .)
    AWAIT           reduce using rule 5 (statement -> constant_declaration .)
    LBRACKET        reduce using rule 5 (statement -> constant_declaration .)
    MINUS           reduce using rule 5 (statement -> constant_declaration .)
    LPAREN          reduce using rule 5 (statement -> constant_declaration .)
    NUMBER          reduce using rule 5 (statement -> constant_declaration .)
    STRING          reduce using rule 5 (statement -> constant_declaration .)
    AT              reduce using rule 5 (statement -> constant_declaration .)
    $end            reduce using rule 5 (statement -> constant_declaration .)
    RBRACE          reduce using rule 5 (statement -> constant_declaration .)


state 6

    (6) statement -> function_declaration .

    LET             reduce using rule 6 (statement -> function_declaration .)
    MUT             reduce using rule 6 (statement -> function_declaration .)
    CONST           reduce using rule 6 (statement -> function_declaration .)
    ASYNC           reduce using rule 6 (statement -> function_declaration .)
    FN              reduce using rule 6 (statement -> function_declaration .)
    STRUCT          reduce using rule 6 (statement -> function_declaration .)
    ENUM            reduce using rule 6 (statement -> function_declaration .)
    INTERFACE       reduce using rule 6 (statement -> function_declaration .)
    PRINT           reduce using rule 6 (statement -> function_declaration .)
    IF              reduce using rule 6 (statement -> function_declaration .)
    RETURN          reduce using rule 6 (statement -> function_declaration .)
    MATCH           reduce using rule 6 (statement -> function_declaration .)
    IMPORT          reduce using rule 6 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 6 (statement -> function_declaration .)
    AWAIT           reduce using rule 6 (statement -> function_declaration .)
    LBRACKET        reduce using rule 6 (statement -> function_declaration .)
    MINUS           reduce using rule 6 (statement -> function_declaration .)
    LPAREN          reduce using rule 6 (statement -> function_declaration .)
    NUMBER          reduce using rule 6 (statement -> function_declaration .)
    STRING          reduce using rule 6 (statement -> function_declaration .)
    AT              reduce using rule 6 (statement -> function_declaration .)
    $end            reduce using rule 6 (statement -> function_declaration .)
    RBRACE          reduce using rule 6 (statement -> function_declaration .)


state 7

    (7) statement -> struct_declaration .

    LET             reduce using rule 7 (statement -> struct_declaration .)
    MUT             reduce using rule 7 (statement -> struct_declaration .)
    CONST           reduce using rule 7 (statement -> struct_declaration .)
    ASYNC           reduce using rule 7 (statement -> struct_declaration .)
    FN              reduce using rule 7 (statement -> struct_declaration .)
    STRUCT          reduce using rule 7 (statement -> struct_declaration .)
    ENUM            reduce using rule 7 (statement -> struct_declaration .)
    INTERFACE       reduce using rule 7 (statement -> struct_declaration .)
    PRINT           reduce using rule 7 (statement -> struct_declaration .)
    IF              reduce using rule 7 (statement -> struct_declaration .)
    RETURN          reduce using rule 7 (statement -> struct_declaration .)
    MATCH           reduce using rule 7 (statement -> struct_declaration .)
    IMPORT          reduce using rule 7 (statement -> struct_declaration .)
    IDENTIFIER      reduce using rule 7 (statement -> struct_declaration .)
    AWAIT           reduce using rule 7 (statement -> struct_declaration .)
    LBRACKET        reduce using rule 7 (statement -> struct_declaration .)
    MINUS           reduce using rule 7 (statement -> struct_declaration .)
    LPAREN          reduce using rule 7 (statement -> struct_declaration .)
    NUMBER          reduce using rule 7 (statement -> struct_declaration .)
    STRING          reduce using rule 7 (statement -> struct_declaration .)
    AT              reduce using rule 7 (statement -> struct_declaration .)
    $end            reduce using rule 7 (statement -> struct_declaration .)
    RBRACE          reduce using rule 7 (statement -> struct_declaration .)


state 8

    (8) statement -> enum_declaration .
